@@ -1,0 +1,15 @@
+
+/*
+ * Copyright (C) 2011 Archie L. Cobbs and other authors. All rights reserved.
+ *
+ * $Id$
+ */
+
+package org.dellroad.stuff.vaadin;
+
+/**
+ * Marker interface used by the {@code VaadinConfigurableAspect}.
+ */
+public interface VaadinConfigurableObject {
+}
+
